--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "outDir": "dist"
-  }
+    "sourceMap": true,
     "types": ["jest"]
+  },
+  "exclude": ["node_modules", "tests"]
 }
