--- a/package.json
+++ b/package.json
@@ -1,22 +1,36 @@
 {
-  "name": "navigation",
-  "private": true,
-  "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
+    "build-lib": "vue-tsc && vite build --config vite.config.lib.ts",
     "preview": "vite preview"
   },
   "dependencies": {
-    "animejs": "^3.2.1",
     "vue": "^3.2.45"
   },
   "devDependencies": {
     "@types/animejs": "^3.1.6",
     "@vitejs/plugin-vue-jsx": "^3.0.0",
+    "animejs": "^3.2.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
+    "vite-plugin-dts": "^1.7.1",
     "vue-tsc": "^1.0.11"
-  }
+  },
+  "name": "@0x30/vue-navigation",
+  "version": "1.1.0",
+  "main": "dist/vue-navigation.umd.cjs",
+  "module": "dist/vue-navigation.js",
+  "types": "dist/core/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/0x30/vue-navigation.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/0x30/vue-navigation/issues"
+  },
+  "homepage": "https://github.com/0x30/vue-navigation#readme",
+  "description": ""
 }
