--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "build-lib": "vue-tsc && vite build --config vite.config.lib.ts",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "npm": "npm publish --registry https://registry.npmjs.org"
   },
   "dependencies": {
     "vue": "^3.2.45"
@@ -19,7 +20,7 @@
     "vue-tsc": "^1.0.11"
   },
   "name": "@0x30/vue-navigation",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "main": "dist/vue-navigation.umd.cjs",
   "module": "dist/vue-navigation.js",
   "types": "dist/core/index.d.ts",
