--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "vue-tsc && vite build",
     "build-lib": "vue-tsc && vite build --config vite.config.lib.ts",
     "preview": "vite preview",
-    "publish": "npm publish --registry https://registry.npmjs.org"
+    "pub": "npm run build-lib && npm publish --registry https://registry.npmjs.org"
   },
   "dependencies": {
     "vue": "^3.2.45"
@@ -20,7 +20,7 @@
     "vue-tsc": "^1.0.11"
   },
   "name": "@0x30/vue-navigation",
-  "version": "1.1.5",
+  "version": "1.1.6",
   "main": "dist/vue-navigation.umd.cjs",
   "module": "dist/vue-navigation.js",
   "types": "dist/core/index.d.ts",
