--- a/package.json
+++ b/package.json
@@ -1,41 +1,26 @@
 {
-  "type": "module",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "pnpm --dir ./packages/core build",
     "build-lib": "vue-tsc && vite build --config vite.config.lib.ts",
     "preview": "vite preview",
     "pub": "npm run build-lib && npm publish --registry https://registry.npmjs.org"
   },
-  "dependencies": {
-    "vue": "^3.2.45"
-  },
   "devDependencies": {
-    "@types/animejs": "^3.1.6",
-    "@vitejs/plugin-vue-jsx": "^3.0.0",
-    "animejs": "^3.2.1",
-    "typescript": "^4.9.3",
-    "vite": "^4.0.0",
-    "vite-plugin-dts": "^1.7.1",
-    "vue-tsc": "^1.0.11"
+    "@types/animejs": "^3.1.12",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "typescript": "^4.9.5",
+    "vite": "^5.0.10",
+    "vite-plugin-dts": "^1.7.3",
+    "vue-tsc": "^1.8.26"
   },
-  "name": "@0x30/vue-navigation",
-  "version": "1.3.2",
-  "main": "dist/vue-navigation.umd.cjs",
-  "module": "dist/vue-navigation.js",
-  "types": "dist/core/index.d.ts",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/0x30/vue-navigation.git"
-  },
-  "author": "",
-  "bugs": {
-    "url": "https://github.com/0x30/vue-navigation/issues"
-  },
-  "homepage": "https://github.com/0x30/vue-navigation#readme",
-  "description": "",
-  "files": [
-    "dist/*.js",
-    "dist/core/index.d.ts"
-  ]
+  "dependencies": {
+    "@0x30/vue-navigation": "workspace:*",
+    "animejs": "^3.2.2",
+    "vue": "^3.3.13"
+  }
 }
