--- a/package.json
+++ b/package.json
@@ -5,22 +5,19 @@
   ],
   "scripts": {
     "dev": "vite",
-    "build": "pnpm --dir ./packages/core build",
-    "build-lib": "vue-tsc && vite build --config vite.config.lib.ts",
-    "preview": "vite preview",
+    "build-core": "pnpm --dir ./packages/core build",
+    "build-layout": "pnpm --dir ./packages/layout build",
     "pub": "npm run build-lib && npm publish --registry https://registry.npmjs.org"
   },
   "devDependencies": {
-    "@types/animejs": "^3.1.12",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
     "typescript": "^4.9.5",
     "vite": "^5.0.10",
-    "vite-plugin-dts": "^1.7.3",
     "vue-tsc": "^1.8.26"
   },
   "dependencies": {
     "@0x30/vue-navigation": "workspace:*",
-    "animejs": "^3.2.2",
+    "@0x30/vue-navigation-layout": "workspace:*",
     "vue": "^3.3.13"
   }
 }
