--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -1,15 +1,43 @@
 {
-  "name": "layout",
+  "name": "@0x30/vue-navigation-layout",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "vue-tsc && vite build",
+    "pub": "npm run build && npm publish --registry https://registry.npmjs.org"
   },
   "keywords": [],
-  "author": "",
   "license": "ISC",
   "peerDependencies": {
-    "@0x30/vue-navigation": "workspace:*"
-  }
+    "@0x30/vue-navigation": "workspace:*",
+    "animejs": "^3.2.2"
+  },
+  "devDependencies": {
+    "@types/animejs": "^3.1.12",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "sass": "^1.69.5",
+    "typescript": "^4.9.5",
+    "vite": "^5.0.10",
+    "vite-plugin-css-injected-by-js": "^3.3.1",
+    "vite-plugin-dts": "^1.7.3",
+    "vue-tsc": "^1.8.26"
+  },
+  "main": "dist/vue-navigation-layout.umd.js",
+  "module": "dist/vue-navigation-layout.mjs",
+  "types": "dist/index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/0x30/vue-navigation.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/0x30/vue-navigation/issues"
+  },
+  "homepage": "https://github.com/0x30/vue-navigation#readme",
+  "description": "",
+  "files": [
+    "dist/*.js",
+    "dist/index.d.ts"
+  ]
 }
