--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build-core": "pnpm --dir ./packages/core build",
     "build-layout": "pnpm --dir ./packages/layout build",
+    "build": "npm run build-core && npm run build-layout",
     "pub": "npm run build-lib && npm publish --registry https://registry.npmjs.org"
   },
   "devDependencies": {
