--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -23,8 +23,9 @@
     "vite-plugin-dts": "^1.7.3",
     "vue-tsc": "^1.8.26"
   },
-  "main": "dist/vue-navigation-layout.umd.js",
-  "module": "dist/vue-navigation-layout.mjs",
+  "type": "module",
+  "main": "dist/vue-navigation-layout.umd.cjs",
+  "module": "dist/vue-navigation-layout.js",
   "types": "dist/index.d.ts",
   "repository": {
     "type": "git",
