--- a/packages/layout/package.json
+++ b/packages/layout/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "scripts": {
     "build": "vue-tsc && vite build",
-    "pub": "npm run build && npm publish --registry https://registry.npmjs.org"
+    "pub": "npm run build && npm publish --access public --registry https://registry.npmjs.org"
   },
   "keywords": [],
   "license": "ISC",
