--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,10 +15,20 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0"
   },
   "name": "@0x30/vue-navigation",
-  "version": "1.3.3",
-  "main": "dist/vue-navigation.umd.cjs",
-  "module": "dist/vue-navigation.js",
-  "types": "dist/index.d.ts",
+  "version": "1.3.4",
+  "main": "./dist/vue-navigation.umd.cjs",
+  "module": "./dist/vue-navigation.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/vue-navigation.js",
+      "require": "./dist/vue-navigation.umd.cjs"
+    }
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/0x30/vue-navigation.git"
@@ -28,9 +38,5 @@
     "url": "https://github.com/0x30/vue-navigation/issues"
   },
   "homepage": "https://github.com/0x30/vue-navigation#readme",
-  "description": "",
-  "files": [
-    "dist/*.js",
-    "dist/index.d.ts"
-  ]
+  "description": ""
 }
