--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
     "pub": "npm run pub-core && npm run pub-layout"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.2",
+    "eslint-plugin-vue": "^9.19.2",
+    "prettier": "^3.1.1",
     "typescript": "^4.9.5",
     "vite": "^5.0.10",
     "vue-tsc": "^1.8.26"
