--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -15,7 +15,7 @@
     "@vitejs/plugin-vue-jsx": "^3.1.0"
   },
   "name": "@0x30/vue-navigation",
-  "version": "1.3.6",
+  "version": "1.3.7",
   "main": "./dist/vue-navigation.umd.cjs",
   "module": "./dist/vue-navigation.js",
   "types": "./dist/index.d.ts",
@@ -38,5 +38,10 @@
     "url": "https://github.com/0x30/vue-navigation/issues"
   },
   "homepage": "https://github.com/0x30/vue-navigation#readme",
-  "description": ""
+  "keywords": [
+    "vue3",
+    "router",
+    "anime",
+    "KeepAlive"
+  ]
 }
