--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "npm run build-core && npm run build-layout",
     "pub-core": "pnpm --dir ./packages/core pub",
     "pub-layout": "pnpm --dir ./packages/layout pub",
-    "pub": "npm run pub-core && npm run pub-layout"
+    "pub": "npm run pub-core && npm run pub-layout",
+    "build-example": "vue-tsc && vite build"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.15.0",
