--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,11 +8,11 @@
     "vue": "^3.3.0"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
     "typescript": "^4.9.5",
     "vite": "^5.0.10",
     "vite-plugin-dts": "^1.7.3",
-    "vue-tsc": "^1.8.26",
-    "@vitejs/plugin-vue-jsx": "^3.1.0"
+    "vue-tsc": "^1.8.27"
   },
   "name": "@0x30/vue-navigation",
   "version": "1.3.9",
