--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -12,7 +12,9 @@
     "typescript": "^4.9.5",
     "vite": "^5.0.10",
     "vite-plugin-dts": "^1.7.3",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^1.8.27",
+    "sass": "^1.69.7",
+    "vite-plugin-css-injected-by-js": "^3.3.1"
   },
   "name": "@0x30/vue-navigation",
   "version": "1.3.11",
