--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   ],
   "scripts": {
     "dev": "vite --host",
+    "start": "node scripts/dev.mjs",
     "build-core": "pnpm --dir ./packages/core build",
     "build-layout": "pnpm --dir ./packages/layout build",
     "build": "npm run build-core && npm run build-layout",
@@ -14,21 +15,24 @@
     "build-example": "vue-tsc && vite build"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^6.17.0",
-    "@typescript-eslint/parser": "^6.17.0",
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "eslint": "^8.56.0",
+    "@typescript-eslint/eslint-plugin": "^7.15.0",
+    "@typescript-eslint/parser": "^7.15.0",
+    "@vitejs/plugin-vue-jsx": "^4.0.0",
+    "chokidar": "^3.6.0",
+    "cross-spawn": "^7.0.3",
+    "eslint": "^9.6.0",
     "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.2",
-    "eslint-plugin-vue": "^9.19.2",
-    "prettier": "^3.1.1",
-    "typescript": "^4.9.5",
-    "vite": "^5.0.10",
-    "vue-tsc": "^1.8.27"
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-vue": "^9.26.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.3.2",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.2",
+    "vue-tsc": "^2.0.24"
   },
   "dependencies": {
     "@0x30/vue-navigation": "workspace:*",
     "@0x30/vue-navigation-layout": "workspace:*",
-    "vue": "^3.4.3"
+    "vue": "^3.4.31"
   }
 }
