--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -8,13 +8,13 @@
     "vue": "^3.3.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue-jsx": "^3.1.0",
-    "typescript": "^4.9.5",
-    "vite": "^5.0.10",
-    "vite-plugin-dts": "^1.7.3",
-    "vue-tsc": "^1.8.27",
-    "sass": "^1.69.7",
-    "vite-plugin-css-injected-by-js": "^3.3.1"
+    "@vitejs/plugin-vue-jsx": "^4.0.0",
+    "sass": "^1.77.6",
+    "typescript": "^5.5.3",
+    "vite": "^5.3.2",
+    "vite-plugin-css-injected-by-js": "^3.5.1",
+    "vite-plugin-dts": "^3.9.1",
+    "vue-tsc": "^2.0.24"
   },
   "name": "@0x30/vue-navigation",
   "version": "1.3.13",
