feat: 简化开发流程

--- a/package.json
+++ b/package.json
@@ -5,26 +5,19 @@
   ],
   "scripts": {
     "dev": "vite --host",
-    "start": "node scripts/dev.mjs",
-    "build-core": "pnpm --dir ./packages/core build",
-    "build-layout": "pnpm --dir ./packages/layout build",
-    "build": "npm run build-core && npm run build-layout",
-    "pub-core": "pnpm --dir ./packages/core pub",
-    "pub-layout": "pnpm --dir ./packages/layout pub",
-    "pub": "npm run pub-core && npm run pub-layout",
-    "build-example": "vue-tsc && vite build"
+    "build-packages": "pnpm --dir ./packages/core build && pnpm --dir ./packages/layout build",
+    "build": "vue-tsc && vite build",
+    "publish-packages": "pnpm --dir ./packages/core pub && pnpm --dir ./packages/layout pub"
   },
   "devDependencies": {
+    "@types/node": "^24.5.2",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "@vitejs/plugin-vue-jsx": "^4.2.0",
-    "chokidar": "^3.6.0",
-    "cross-spawn": "^7.0.6",
     "eslint": "^9.27.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.4.0",
     "eslint-plugin-vue": "^9.33.0",
-    "npm-run-all": "^4.1.5",
     "prettier": "^3.5.3",
     "typescript": "^5.8.3",
     "vite": "^5.4.19",
