--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "vue-tsc": "^2.2.10"
   },
   "dependencies": {
-    "@0x30/vue-navigation": "workspace:*",
-    "@0x30/vue-navigation-layout": "workspace:*",
+    "@0x30/navigation-vue": "workspace:*",
+    "animejs": "^4.0.2",
     "vue": "^3.5.14"
   }
 }
