--- a/examples/vue-demo/tsconfig.json
+++ b/examples/vue-demo/tsconfig.json
@@ -13,9 +13,9 @@
     "jsx": "preserve",
     "jsxImportSource": "vue",
     "strict": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*.ts", "src/**/*.tsx"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
