refactor: remove layout package and its components
- Deleted the layout package including all its components such as NavPage, Page, SidePage, and Loading.
- Removed associated styles, utility functions, and configuration files.
- Cleaned up package.json and TypeScript configuration files related to the layout package.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,8 +15,9 @@
     "jsxImportSource": "vue",
     "baseUrl": ".",
     "paths": {
-      "@0x30/vue-navigation": ["./packages/core/src/index.ts"],
-      "@0x30/vue-navigation-layout": ["./packages/layout/src/index.ts"]
+      "@0x30/navigation-core": ["./packages/navigation-core/src/index.ts"],
+      "@0x30/navigation-vue": ["./packages/navigation-vue/src/index.ts"],
+      "@0x30/navigation-react": ["./packages/navigation-react/src/index.ts"]
     }
   },
   "include": [
