--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,35 +1,89 @@
-name: github-pages
+name: Deploy to GitHub Pages
 
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
   workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js environment
-        uses: actions/setup-node@v2.1.2
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          node-version: 22.17.0
+          node-version: 22
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@v2
+        uses: pnpm/action-setup@v3
         with:
-          version: 8
+          version: 9
 
-      - run: pnpm install
-      - run: pnpm build
+      - name: Get pnpm store directory
+        shell: bash
+        run: |
+          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
 
-      - name: GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.2.0
+      - name: Setup pnpm cache
+        uses: actions/cache@v4
         with:
-          build_dir: dist
-          jekyll: false # optional, default is true
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          path: ${{ env.STORE_PATH }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+
+      - name: Install dependencies
+        run: pnpm install
+
+      - name: Build packages
+        run: pnpm build-packages
+
+      - name: Build landing page
+        run: pnpm --dir ./examples/landing build
+
+      - name: Build Vue demo
+        run: pnpm --dir ./examples/vue-demo build --base=/vue-navigation/vue/
+
+      - name: Build React demo
+        run: pnpm --dir ./examples/react-demo build --base=/vue-navigation/react/
+
+      - name: Prepare dist folder
+        run: |
+          mkdir -p dist
+          cp -r examples/landing/dist/* dist/
+          mkdir -p dist/vue
+          cp -r examples/vue-demo/dist/* dist/vue/
+          mkdir -p dist/react
+          cp -r examples/react-demo/dist/* dist/react/
+
+      - name: Setup Pages
+        uses: actions/configure-pages@v4
+
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: './dist'
+
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
