--- a/examples/landing/package.json
+++ b/examples/landing/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "landing",
+  "name": "navigation-docs",
   "version": "0.0.1",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite --port 5170",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "vitepress dev docs",
+    "build": "vitepress build docs",
+    "preview": "vitepress preview docs"
   },
   "devDependencies": {
-    "vite": "^5.4.2"
+    "vitepress": "^1.5.0"
   }
 }
