--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "Bundler",
     "strict": true,
     "jsx": "preserve",
     "resolveJsonModule": true,
@@ -13,7 +13,6 @@
     "skipLibCheck": true,
     "noEmit": true,
     "jsxImportSource": "vue",
-    "baseUrl": ".",
     "paths": {
       "@0x30/navigation-core": ["./packages/navigation-core/src/index.ts"],
       "@0x30/navigation-vue": ["./packages/navigation-vue/src/index.ts"],
